--- a/generics-sop-examples.cabal
+++ b/generics-sop-examples.cabal
@@ -1,5 +1,5 @@
 cabal-version:      2.4
-name:               haskell-template
+name:               generics-sop-examples
 version:            0.1.0.0
 license:            MIT
 copyright:          2022 Sridhar Ratnakumar
@@ -21,7 +21,7 @@ extra-source-files:
   LICENSE
   README.md
 
-executable haskell-template
+executable generics-sop-examples
   build-depends:
     , aeson
     , async
