--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "editor.formatOnType": true,
   "editor.formatOnSave": true,
-  "nixEnvSelector.nixFile": "${workspaceRoot}/shell.nix"
+  "nixEnvSelector.nixFile": "${workspaceRoot}/shell.nix",
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#1A2867",
+    "titleBar.activeBackground": "#243791",
+    "titleBar.activeForeground": "#FAFBFE"
+  }
 }
