--- a/generics-sop-examples.cabal
+++ b/generics-sop-examples.cabal
@@ -40,8 +40,8 @@ executable generics-sop-examples
     , text
     , time
     , with-utf8
-    , these
 
+  other-modules:      Equality
   ghc-options:
     -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
     -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
