Start a 2nd example (route encoding)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
             "type": "shell",
             // You may also use bin/run-via-tmux if you have tmux
             // This is useful if you often see ghost ghcid left behind by VSCode reloads.
-            "command": "bin/run",
+            "command": "bin/run-via-tmux",
             "args": [],
             "problemMatcher": [],
             "group": {
