--- a/generics-sop-examples.cabal
+++ b/generics-sop-examples.cabal
@@ -25,7 +25,7 @@ executable generics-sop-examples
   build-depends:
     , aeson
     , async
-    , base          >=4.13.0.0 && <=4.18.0.0
+    , base          >=4.13.0.0 && <4.18.0.0.0
     , bytestring
     , containers
     , data-default
@@ -35,6 +35,7 @@ executable generics-sop-examples
     , lens
     , mtl
     , profunctors
+    , QuickCheck
     , shower
     , sop-core
     , text
